--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Material Design for Bootstrap</title>
+    <title>Maitre D</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
     <!-- Font Awesome -->
@@ -23,6 +23,18 @@
   </head>
 
   <body>
-<h1>Maitre D</h1>
+<div id="container">
+    <h1> Maitre D </h1>
 
-  </body>
+
+    <div id = "Tip Calculator">
+        <form>
+            <label>
+                Total: <input type = "text" id="billAmount">
+            </label>
+            
+
+
+
+
+        </form>
