--- a/index.html
+++ b/index.html
@@ -23,16 +23,21 @@
   </head>
 
   <body>
-<div id="container">
+    <main>
     <h1> Maitre D </h1>
+    <!---Total-->
+        <label>
+         Total: <input type = "text" id="billAmount">
+            </label> 
+    <!---Rate-->
+    <br>
+    <label>
+        Rate: <input type = "number" id="tipRate">
+           </label> 
+<!--tax-->
+        Tax: <input type = "number" id="taxRate">
+        </label> 
 
-
-    <div id = "Tip Calculator">
-        <form>
-            <label>
-                Total: <input type = "text" id="billAmount">
-            </label>
-            
 
 
 
