--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Maitre D</title>
+    <div style="text-align:center;">
+      <hr width="500px">
+      <h1>Maitre D</h1>
+      <hr width="450px">
+  </div>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
     <!-- Font Awesome -->
