--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <div style="text-align:center;">
       <hr width="500px">
-      <h1>Maitre D</h1>
+      <h1><strong>Maitre D</strong>/h1>
       <hr width="450px">
   </div>
     <!-- MDB icon -->
@@ -28,17 +28,22 @@
 
   <body>
     <main>
-    <h1> Maitre D </h1>
+
+
+    
     <!---Total-->
+        <div style="display:flex; flex-direction: row; justify-content: center; align-items: center">
         <label>
          Total: <input type = "text" id="billAmount">
             </label> 
     <!---Rate-->
     <br>
+    <div style="display:flex; flex-direction: row; justify-content: center; align-items: center"></div>
     <label>
         Rate: <input type = "number" id="tipRate">
            </label> 
 <!--tax-->
+<div style="display:flex; flex-direction: row; justify-content: center; align-items: center">
         Tax: <input type = "number" id="taxRate">
         </label> 
 
