--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    <label>Total</label>
   </th>
   <th scope="row">
-   <div align="left">
+   <div align="center">
     <input name="total" type="text" id="total" size="11">
    </div>
   </th>
@@ -48,7 +48,7 @@
       <label>Rate</label>
      </th>
      <th scope="row">
-      <div align="left">
+      <div align="center">
        <input name="total" type="text" id="total" size="11">
       </div>
      </th>
@@ -57,7 +57,7 @@
   <label>Tax</label>
  </th>
  <th scope="row">
-  <div align="left">
+  <div align="center">
    <input name="tax" type="text" id="tax" size="11">
   </div>
  </th>
