--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!---Total-->
         
   <tr><th>
-   <label>Total</label>
+   <label>Total:</label>
   </th>
-  <th scope="row">
+  <th scope="column">
    <div align="center">
     <input name="total" type="text" id="total" size="11">
    </div>
@@ -47,7 +47,7 @@
     <tr><th>
       <label>Rate</label>
      </th>
-     <th scope="row">
+     <th scope="column">
       <div align="center">
        <input name="total" type="text" id="total" size="11">
       </div>
@@ -56,7 +56,7 @@
  <tr><th>
   <label>Tax</label>
  </th>
- <th scope="row">
+ <th scope="column">
   <div align="center">
    <input name="tax" type="text" id="tax" size="11">
   </div>
