--- a/index.html
+++ b/index.html
@@ -47,12 +47,26 @@
       <label>Rate</label>
        <input name="total" type="text" id="total" size="11">
       </div>
+      <br>
 
 <!--tax-->
 
   <label>Tax</label>
     <input name="tax" type="text" id="tax" size="11">
   </div>
+
+  <!--tip-->
+
+  <label>Tax</label>
+    <input name="tax" type="text" id="tax" size="11">
+  </div>
+
+  <!--Grand total-->
+
+  <label>Tax</label>
+    <input name="tax" type="text" id="tax" size="11">
+  </div>
+
 
 
 
