--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   
     <input name="total" type="text" id="total" size="11">
    </div>
-  
+  <br>
 
     <!---Rate-->
     
@@ -54,18 +54,22 @@
   <label>Tax</label>
     <input name="tax" type="text" id="tax" size="11">
   </div>
+  <br>
 
   <!--tip-->
 
-  <label>Tax</label>
+  <label>Tip</label>
     <input name="tax" type="text" id="tax" size="11">
   </div>
+  <br>
 
   <!--Grand total-->
 
-  <label>Tax</label>
+  <label>Grand Total</label>
     <input name="tax" type="text" id="tax" size="11">
   </div>
+  <br>
+
 
 
 
