--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
 <!--tax-->
 
   <label>Tax</label>
-    <input name="tax" size="11">
+    <input name="tax" size="11" readonly>
   </div>
   <br>
 
   <!--tip-->
 
   <label>Tip</label>
-    <input name="tax" size="11">
+    <input name="tax" size="11" readonly>
   </div>
   <br>
 
   <!--Grand total-->
 
   <label>Grand Total</label>
-    <input name="tax" size="11">
+    <input name="tax" size="11"readonly>
   </div>
   <br>
 
