--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
   
     <input name="total" type="text" id="total" size="11">
    </div>
-  <br>
+  
 
     <!---Rate-->
     
   
-      <label>Rate</label>
+      <label>Tip Rate:</label>
        <input name="total" type="text" id="total" size="11">
       </div>
       <br>
@@ -61,7 +61,7 @@
   <label>Tip</label>
     <input name="tax" size="11" readonly>
   </div>
-  <br>
+
 
   <!--Grand total-->
 
