--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
 <!--tax-->
 
-  <label>Tax</label>
+  <label>Tax:</label>
     <input name="tax" size="11" readonly>
   </div>
 
 
   <!--tip-->
 
-  <label>Tip</label>
+  <label>    Tip:</label>
     <input name="tax" size="11" readonly>
   </div>
 
