--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
    <label>Total:</label>
   
-    <input name="total" type="text" id="total" size="11">
+    <input name="total" type="text" id="uno" size="11">
    </div>
   
 
@@ -46,28 +46,28 @@
     
   
       <label>Tip Rate:</label>
-       <input name="total" type="text" id="total" size="11">
+       <input name="total" type="text" id="dos" size="11">
       </div>
       <br>
 
 <!--tax-->
 
   <label>Tax:</label>
-    <input name="tax" size="11" readonly>
+  <input name="total"  id="tres" size="11" readonly>
   </div>
 
 
   <!--tip-->
 
   <label>    Tip:</label>
-    <input name="tax" size="11" readonly>
+  <input name="total" id="quatro" size="11" readonly>
   </div>
 
 <br> <br>
   <!--Grand total-->
 
   <label>Grand Total</label>
-    <input name="tax" size="11"readonly>
+  <input name="total" id="cinco" size="11" readonly>
   </div>
   <br>
 
