--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div style="text-align:center;">
       <hr width="500px">
       <h1><strong>Maitre D</strong></h1>
-      <link rel="table" href="hello.css">
+      <link rel="tbl" href="hello.css">
       <hr width="450px">
   </div>
     <!-- MDB icon -->
