--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
     
   
       <label>Tip Rate:</label>
-       <input name="total" type="text" id="dos" size="11">
+       <input name="tipR" type="text" id="dos" size="11">
       </div>
       <br>
 
 <!--tax-->
 
   <label>Tax:</label>
-  <input name="total"  id="tres" size="11" readonly>
+  <input name="tax"  id="tres" size="11" readonly>
   </div>
 
 
   <!--tip-->
 
   <label>    Tip:</label>
-  <input name="total" id="quatro" size="11" readonly>
+  <input name="tipA" id="quatro" size="11" readonly>
   </div>
 
 <br> <br>
   <!--Grand total-->
 
   <label>Grand Total</label>
-  <input name="total" id="cinco" size="11" readonly>
+  <input name="Gtotal" id="cinco" size="11" readonly>
   </div>
   <br>
 
@@ -78,3 +78,5 @@
 
 
         </form>
+
+  <script type="text/javascript" src="formulae.js"></script>
