--- a/index.html
+++ b/index.html
@@ -71,12 +71,9 @@
   </div>
   <br>
 
-  <button type="button" onclick=" "><strong>CALCULATE</strong></button>
+  <button type="button" id = "lamo" onclick=" "><strong>CALCULATE</strong></button>
 
-
-
-
-
-        </form>
+</center>
+</body>
 
   <script type="text/javascript" src="formulae.js"></script>
