--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <br>
 
-  <button type="button" id = "lamo" onclick=" "><strong>CALCULATE</strong></button>
+  <button type="button" id = "lamo" onclick= calculate() ><strong>CALCULATE</strong></button>
 
 </center>
 </body>
