--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,15 +15,9 @@
   <body>
 
     <center>
-
-
-    
     <!---Total-->
-        
-  
    <label>Total:</label>
-  
-    <input name="total" type="text" id="uno" size="11">
+   <input name="total" type="text" id="uno" size="11">
    </div>
   
 
@@ -62,3 +56,5 @@
 </body>
 
   <script type="text/javascript" src="formulae.js"></script>
+
+</html>
