--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
 </center>
 </body>
 
-  <script type="text/javascript" src="formulae.js"></script>
+<script src="formulae.js"></script>
 
 </html>
