--- a/index.html
+++ b/index.html
@@ -31,23 +31,17 @@
 
 <!--tax-->
 
-  <label>Tax:</label>
-  <input name="tax"  id="tres" size="11" readonly>
-  </div>
+  <div class = taxholder><p id="tres">Tip: </p></div>
 
 
   <!--tip-->
 
-  <label>    Tip:</label>
-  <input name="tipA" id="quatro" size="11" readonly>
-  </div>
+  <div class = tipholder><p id="quatro">Tip: </p></div>
 
 <br> <br>
   <!--Grand total-->
 
-  <label>Grand Total</label>
-  <input name="Gtotal" id="cinco" size="11" readonly>
-  </div>
+  <div class = Gtotal><p id="cinco">Tip: </p></div>
   <br>
 
   <button type="button" id = "lamo"><strong>CALCULATE</strong></button>
