--- a/index.html
+++ b/index.html
@@ -31,17 +31,23 @@
 
 <!--tax-->
 
-  <div class = taxholder><p id="tres">Tip: </p></div>
+  <label>Tax:</label>
+  <input name="tax"  id="tres" size="11" readonly>
+  </div>
 
 
   <!--tip-->
 
-  <div class = tipholder><p id="quatro">Tip: </p></div>
+  <label>    Tip:</label>
+  <input name="tipA" id="quatro" size="11" readonly>
+  </div>
 
 <br> <br>
   <!--Grand total-->
 
-  <div class = Gtotal><p id="cinco">Tip: </p></div>
+  <label>Grand Total</label>
+  <input name="Gtotal" id="cinco" size="11" readonly>
+  </div>
   <br>
 
   <button type="button" id = "lamo"><strong>CALCULATE</strong></button>
@@ -49,6 +55,6 @@
 </center>
 </body>
 
-<script src="formulae.js"></script>
+  <script type="text/javascript" src="formulae.js"></script>
 
 </html>
