--- a/index.html
+++ b/index.html
@@ -32,21 +32,22 @@
 <!--tax-->
 
   <label>Tax:</label>
-  <input name="tax"  id="tres" size="11" readonly>
+  <span>id="tres"</span>
   </div>
 
 
   <!--tip-->
 
-  <label>    Tip:</label>
-  <input name="tipA" id="quatro" size="11" readonly>
+  <label>Tip:</label>
+  <span>id="quatro"</span>
   </div>
 
 <br> <br>
   <!--Grand total-->
 
-  <label>Grand Total</label>
-  <input name="Gtotal" id="cinco" size="11" readonly>
+  <label>Grand Total: </label>
+  <span>id="cinco"</span>
+  </div>
   </div>
   <br>
 
