--- a/index.html
+++ b/index.html
@@ -32,29 +32,31 @@
 <!--tax-->
 
   <label>Tax:</label>
-  <input name="tax"  id="tres" size="11" readonly>
+  <!--tax--<input name="tax"  id="tres" size="11" readonly> -->
+  <h5 id="tres"></h5>
   </div>
 
 
   <!--tip-->
 
   <label>    Tip:</label>
-  <input name="tipA" id="quatro" size="11" readonly>
+ <!--- <input name="tipA" id="quatro" size="11" readonly> --->
+  <h5 id="quatro"></h5>
   </div>
 
 <br> <br>
   <!--Grand total-->
 
   <label>Grand Total</label>
-  <input name="Gtotal" id="cinco" size="11" readonly>
+ <!-- <input name="Gtotal" id="cinco" size="11" readonly>-->
+  <h5 id="cinco"></h5>
   </div>
   <br>
 
-  <button type="button" id = "lamo"><strong>CALCULATE</strong></button>
+  <button type="button" id = "lamo" onclick="calculate() "><strong>CALCULATE</strong></button>
 
 </center>
 </body>
 
-  <script type="text/javascript" src="formulae.js"></script>
 
 </html>
