--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 
     <center>
     <!---Total-->
+    <div>
    <label>Total:</label>
    <input name="total" type="text" id="uno" size="11">
-   </div>
   
 
     <!---Rate-->
     
-  
+  <div>
       <label>Tip Rate:</label>
        <input name="tipR" type="text" id="dos" size="11">
       </div>
-      <br>
+      
 
 <!--tax-->
-
+    <div>
   <label>Tax:</label>
   <!--tax--<input name="tax"  id="tres" size="11" readonly> -->
   <h5 id="tres"></h5>
@@ -38,15 +38,15 @@
 
 
   <!--tip-->
-
-  <label>    Tip:</label>
+  <div>
+  <label>Tip:</label>
  <!--- <input name="tipA" id="quatro" size="11" readonly> --->
   <h5 id="quatro"></h5>
   </div>
 
-<br> <br>
+<br> 
   <!--Grand total-->
-
+ <div>
   <label>Grand Total</label>
  <!-- <input name="Gtotal" id="cinco" size="11" readonly>-->
   <h5 id="cinco"></h5>
