--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <!---Total-->
     <div>
    <label>Total:</label>
-   <input name="total" type="text" id="uno" size="11">
+   <input name="total" type="text" id="uno" >
   
 
     <!---Rate-->
     
-  <div>
+      <div>
       <label>Tip Rate:</label>
-       <input name="tipR" type="text" id="dos" size="11">
+       <input name="tipR" type="text" id="dos">
       </div>
       
 
@@ -47,7 +47,7 @@
 <br> 
   <!--Grand total-->
  <div>
-  <label>Grand Total</label>
+  <label>Grand Total:</label>
  <!-- <input name="Gtotal" id="cinco" size="11" readonly>-->
   <h5 id="cinco"></h5>
   </div>
