--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <hr width="500px">
       <h1><strong>Maitre D</strong></h1>
       <link rel="tbl" href="hello.css">
+      <script src="./formulae.js"></script>
       <hr width="900px">
   </div>
     
@@ -44,14 +45,14 @@
   <h5 id="quatro"></h5>
   </div>
 
-<br> 
+
   <!--Grand total-->
  <div>
   <label>Grand Total:</label>
  <!-- <input name="Gtotal" id="cinco" size="11" readonly>-->
   <h5 id="cinco"></h5>
   </div>
-  <br>
+
 
   <button type="button" id = "lamo" onclick="calculate() "><strong>CALCULATE</strong></button>
 
