--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div style="text-align:center;">
       <hr width="500px">
       <h1><strong>Maitre D</strong></h1>
-      <link rel="tbl" href="hello.css">
+      <link rel="tbl" href="./hello.css">
       <script src="./formulae.js"></script>
       <hr width="900px">
   </div>
@@ -41,7 +41,6 @@
   <!--tip-->
   <div>
   <label>Tip:</label>
- <!--- <input name="tipA" id="quatro" size="11" readonly> --->
   <h5 id="quatro"></h5>
   </div>
 
