--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <!--tax-->
     <div>
-  <label>Tax:</label>
+  <label>Tax Amount (5.5%): </label>
   <!--tax--<input name="tax"  id="tres" size="11" readonly> -->
   <h5 id="tres"></h5>
   </div>
@@ -40,7 +40,7 @@
 
   <!--tip-->
   <div>
-  <label>Tip:</label>
+  <label>Tip Amount:</label>
   <h5 id="quatro"></h5>
   </div>
 
